MacViews: Disallow dragging of modals.

views::BubbleFrameView::NonClientHitTest() dutifully returns HTCAPTION
for points that hit the dialog title on non-bubble dialogs. This is
interpreted as a draggable region. But everyone freaks out when modal
windows are draggable, so disallow it.

Other platforms may still want window-modals to be draggable. But on
Mac these are sheets and dragging those is especially trippy.

Bug: 824422, 792528, 500783
Change-Id: I2b9802e53cad7e762fc74d8b4ac73c4d82d067ba
Reviewed-on: https://chromium-review.googlesource.com/974810
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545298}
Former-commit-id: 7ccf96e6fc17d994f4d5b654d209a2af64cfc922